...
                name: "Test Matter Device",
                serviceType: "_matter._tcp",
                discriminator: "3840",
                vendorProductID: "65521+32769",
                commissioningMode: "1",
                deviceType: "256",
                deviceName: "Test Light",
                sessionIdleInterval: "500",
                sessionActiveInterval: "300",
                tcpSupported: "0",
                isICD: "0",
                pairingHint: "33",
                hostname: "test-matter.local.",
...
